# noteorg

./: README .md  README.md  ci.yml  noteorg.py  pyproject.toml  test_noteorg.py
.github/workflows/: ci.yml
